# app-xcdr

./: CMakeLists.txt  LICENSE  Makefile  README.md  postinst  prerm  setup.sh  xrmd_start.bash
